deps/v8/test/message/fail/strict-prior-octal-literal.out
# Copyright 2022 the V8 project authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

*%(basename)s:7: SyntaxError: Octal literals are not allowed in strict mode.
    01;
    ^^
SyntaxError: Octal literals are not allowed in strict mode.

